--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #fbc1c1 11%;
 }
-
-.main-content {
-  margin: 120px 88px;
-}
 .header {
   background-color: #fdfcfc;
   overflow: auto;
@@ -18,6 +14,9 @@ body {
   top: 0%;
   width: 100%;
   box-shadow: 0px 1px 9px rgba(0, 0, 0, 0.116);
+}
+.main-content {
+  margin: 110px 88px;
 }
 
 .header header {
@@ -83,7 +82,7 @@ body {
   flex: 1;
 }
 .headings {
-  font-size: 45px;
+  font-size: 40px;
   line-height: 45px;
   margin-bottom: 20px;
 }
@@ -114,17 +113,38 @@ body {
 .section-head {
   margin: 100px 0px;
   text-align: center;
-  font-size: 35px;
+  font-size: 40px;
+  color: #505050;
 }
 .tech-section {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .tech-icons {
   flex: 1;
   display: flex;
   justify-content: space-evenly;
+  padding-right: 60px;
+}
+.tech-icons img {
+  width: 120px;
 }
 .tech-experience {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.white-btn {
+  margin-top: 20px;
+  width: 160px;
+  font-size: 17px;
+  height: 40px;
+  font-weight: 700;
+  text-align: center;
+  background-color: white;
+  color: #ff8080;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0px 1px 9px rgba(0, 0, 0, 0.116);
+  align-self: center;
 }
