--- a/landing page/landing-styles.css
+++ b/landing page/landing-styles.css
@@ -227,7 +227,7 @@ label{
   padding: 0.3em 0;
   text-align: center;
   margin: 10px 0;
-  background-color: #ffbfbf;
+  background-color: #ff8888;
   color: rgb(255, 255, 255);
   font-weight: 700;
   font-size: 1.2em;
