--- a/login page/login-styles.css
+++ b/login page/login-styles.css
@@ -59,7 +59,7 @@ input {
   padding: 0.6em 0;
   text-align: center;
   margin: 10px 0;
-  background-color: #ffbfbf;
+  background-color: #ff8888;
   color: rgb(255, 255, 255);
   font-weight: 700;
   font-size: 1.2em;
