--- a/landing page/landing-styles.css
+++ b/landing page/landing-styles.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 * {
   margin: 0;
   padding: 0;
 }
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: #fdf2f2;
 }
-.header {
+header {
   background-color: #fdfcfc;
   overflow: auto;
   position: fixed;
