--- a/blog page/blog-styles.css
+++ b/blog page/blog-styles.css
@@ -24,6 +24,9 @@ body {
   overflow: hidden;
 }
 
+.card3 {
+  margin-top: 2rem;
+}
 .nav-links {
   display: flex;
   align-items: center;
@@ -59,13 +62,6 @@ body {
 
 /* cards upper */
 
-.upper-cards {
-  margin-top: 4rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 20px;
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -74,19 +70,6 @@ body {
   box-shadow: 0 0.2rem 0.3rem 0 #d6d6d6;
 }
 
-.card-img {
-  width: 100%;
-  border-radius: 0.5rem 0.5rem 0 0;
-}
-.card-heading {
-  line-height: 1.8rem;
-  padding: 0.2rem 0.5rem;
-}
-.card-description {
-  color: #5f5f5f;
-  line-height: 1.3rem;
-  padding: 0.2rem 0.5rem;
-}
 .read-link {
   color: #ff8080;
   padding: 0.2rem 0 0.8rem 0.5rem;
@@ -94,35 +77,12 @@ body {
   font-weight: 500;
 }
 
-.section-part {
-  margin-top: 2.3rem;
-}
-.stories-slide {
-  display: grid;
-  grid-template-columns: auto 1fr 1fr 1fr auto;
-  column-gap: 2rem;
-  margin-top: 2rem;
-}
-.flipped-right {
-  transform: scaleX(-1);
-}
-
-.card2 {
-  background-color: white;
-}
-
 .card h3 {
   font-size: 1.2rem;
   padding: 0.3rem 0.5rem;
   line-height: 1.5rem;
 }
-.card h4 {
-  color: #ff8080;
-  font-size: 0.8rem;
-  padding: 0.1rem 0.5rem;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-}
+
 .slide {
   align-self: center;
   width: 50%;
@@ -146,21 +106,16 @@ body {
 }
 
 .read-list-section {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  column-gap: 2rem;
+  display: flex;
+  justify-content: space-around;
+  margin-inline: 10rem;
 }
 
 .read-articles {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
 }
-.card3 {
-  display: grid;
-  grid-template-columns: 300px 2fr;
-  margin-top: 2rem;
-  background-color: white;
-}
+
 .card-img1 {
   width: 100%;
 }
@@ -169,6 +124,10 @@ body {
   padding: 0.3rem 0.8rem;
 }
 .card3 p {
+  padding: 0.3rem 0.8rem;
+}
+
+.card3 div {
   padding: 0.3rem 0.8rem;
 }
 
@@ -187,4 +146,32 @@ body {
 
 .img-box {
   object-fit: cover;
+}
+
+.manage button {
+  margin-top: 20px;
+  color: white;
+  border-radius: 7px;
+  width: max-content;
+  padding: 0 1rem;
+  font-size: 17px;
+  height: 40px;
+  font-weight: 700;
+  text-align: center;
+  align-self: center;
+  box-shadow: 0px 1px 9px rgba(0, 0, 0, 0.116);
+
+  /* 
+  border: none;
+
+   */
+}
+
+.edit-btn {
+  background-color: rgb(70, 131, 70);
+  margin-right: 0.5rem;
+}
+
+.delete-btn {
+  background-color: rgb(255, 91, 91);
 }
