--- a/main.css
+++ b/main.css
@@ -4,7 +4,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 :root {
   /* the app main colors */
   --primary-red: #ff8080;
@@ -18,11 +17,15 @@ body {
   background-color: var(--primary-light);
 }
 
+/* setting up the nav bar */
 header {
+  width: 100%;
   padding: 1rem 3.5rem;
-  background-color: white;
+  background-color: #fdfcfc;
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  box-shadow: 0px 1px 9px rgba(0, 0, 0, 0.116);
 }
 
 nav ul {
@@ -32,19 +35,54 @@ nav ul {
 
 nav ul li {
   list-style: none;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 500;
-  padding-inline: 1rem;
+  padding-left: 4rem;
   display: block;
 }
 
-nav ul li a {
+nav a {
   text-decoration: none;
   color: var(--primary-dark);
 }
 
-header ul li a:hover {
+nav ul li a:hover {
   color: var(--primary-red);
+}
+
+.red-btn {
+  width: max-content;
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 15px;
+  border: none;
+  color: white;
+  background-color: #ff8080;
+}
+
+.red-btn {
+  background-color: var(--primary-red);
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  box-shadow: rgba(27, 31, 35, 0.1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+}
+.red-btn:hover {
+  background-color: #fd6e6e;
+}
+
+.red-btn:focus {
+  box-shadow: rgba(255, 117, 117, 0.034) 0 0 0 3px;
+  outline: none;
+}
+
+.red-btn:active {
+  background-color: #da5e5e;
+  box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
 }
 
 .toggle-btn {
@@ -64,7 +102,7 @@ header ul li a:hover {
   background-color: var(--primary-dark);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .toggle-btn {
     display: flex;
   }
@@ -85,4 +123,20 @@ header ul li a:hover {
   .active {
     display: flex;
   }
+}
+
+footer {
+  background-color: #ff9a9a;
+  display: flex;
+  padding: 0.4rem 3.5rem;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .icons {
+  display: flex;
+  font-size: 1.7rem;
+}
+
+footer .icons p {
+  margin-left: 1rem;
 }
