--- a/dashboard/dashboard-styles.css
+++ b/dashboard/dashboard-styles.css
@@ -62,11 +62,12 @@ header {
   margin-bottom: 2rem;
 }
 
-.article-text h3 {
+.display h3 {
   font-size: 1.2rem;
   padding: 0.3rem 0.5rem 0.5rem 0;
   line-height: 1.5rem;
 }
+
 .read-link,
 .author {
   color: #ff8080;
@@ -87,7 +88,7 @@ header {
   width: fit-content;
   padding: 0.5rem 0.6rem;
   margin-left: 0.3rem;
-  color: #f1f1f1;
+  color: #ffffff;
   border-radius: 0.5rem;
 }
 .edit-btn {
@@ -96,124 +97,18 @@ header {
 .delete-btn {
   background-color: rgb(255, 93, 87);
 }
-/* .upper-cards {
-  margin-top: 4rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 20px;
-}
 
-.card {
-  display: flex;
-  flex-direction: column;
+.single-message {
   background-color: white;
-  border-radius: 0.5rem 0.5rem 0 0;
-  box-shadow: 0 0.2rem 0.3rem 0 #d6d6d6;
+  margin-bottom: 1.2rem;
+  padding: 0.5rem;
 }
-
-.card-img {
-  width: 100%;
-  border-radius: 0.5rem 0.5rem 0 0;
+.single-message h4 {
+  color: #f89b9b;
 }
-.card-heading {
-  line-height: 1.8rem;
-  padding: 0.2rem 0.5rem;
+.single-message h5 {
+  color: rgb(97, 97, 97);
 }
-.card-description {
-  color: #5f5f5f;
-  line-height: 1.3rem;
-  padding: 0.2rem 0.5rem;
-}
-
-
-
-.section-part {
-  margin-top: 2.3rem;
-}
-.stories-slide {
-  display: grid;
-  grid-template-columns: auto 1fr 1fr 1fr auto;
-  column-gap: 2rem;
-  margin-top: 2rem;
-}
-.flipped-right {
-  transform: scaleX(-1);
-}
-
-.card2 {
-  background-color: white;
-}
-
-
-.card h4 {
-  color: #ff8080;
-  font-size: 0.8rem;
-  padding: 0.1rem 0.5rem;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-}
-.slide {
-  align-self: center;
-  width: 50%;
-}
-
-.image-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.label {
-  bottom: 0;
-  position: absolute;
-  text-align: center;
-  font-size: 1rem;
-  padding: 0.1rem 0.6rem;
-  color: white;
-  font-weight: 500;
-  background-color: #ff8080;
-}
-
-.read-list-section {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  column-gap: 2rem;
-}
-
-.read-articles {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-.card3 {
-  display: grid;
-  grid-template-columns: 300px 2fr;
-  margin-top: 2rem;
-  background-color: white;
-}
-.card-img1 {
-  width: 100%;
-}
-
-.card3 h3 {
-  padding: 0.3rem 0.8rem;
-}
-.card3 p {
-  padding: 0.3rem 0.8rem;
-}
-
-.article-text {
-  display: flex;
-  flex-direction: column;
-}
-.article-text h3 {
-  padding-top: 0.5rem;
-  font-size: 1.3rem;
-}
-
-.article-text p {
+.single-message p {
   font-size: 0.9rem;
 }
-
-.img-box {
-  object-fit: cover;
-} */
