--- a/signup-page/signup-styles.css
+++ b/signup-page/signup-styles.css
@@ -1,17 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 * {
   padding: 0;
   margin: 0;
 }
 
-a, button{
+a,
+button {
   cursor: pointer;
 }
 
 body {
   background-color: #fff2f2;
   color: rgb(37, 37, 37);
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -29,7 +30,7 @@ body {
 
 input {
   width: 100%;
-  padding: 0.6em 0;
+  padding: 0.6em 0.5rem;
   margin: 5px 0 1em 0;
   margin-right: 10px;
   background-color: #fff6f6b7;
@@ -66,7 +67,7 @@ input {
   border: none;
 }
 
-label{
+label {
   font-weight: 500;
 }
 .sign-up {
@@ -76,7 +77,7 @@ label{
   margin-top: 1.5em;
 }
 
-#agreeTerms{
+#agreeTerms {
   width: auto;
   margin-right: 5px;
 }
@@ -84,10 +85,10 @@ label{
 .login {
   text-align: center;
   color: black;
-  margin-top:10px;
+  margin-top: 10px;
 }
 
-.login a{
+.login a {
   text-decoration: none;
   font-weight: bold;
 }
